--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
   "name": "devconnector",
   "version": "1.0.0",
-  "description": "",
+  "description": "Social networks for developers",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "nodemon": "^3.0.1"
-  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.1",
     "express": "^4.18.2",
+    "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.17",
+    "@types/gravatar": "^1.8.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/validator": "^13.11.1"
   }
 }
